--- a/test_doc/style.css
+++ b/test_doc/style.css
@@ -73,7 +73,7 @@ label select,
 .hide{
 	    position: absolute;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: white;
     z-index: 1;
 
