--- a/fyp_style.css
+++ b/fyp_style.css
@@ -29,3 +29,23 @@ opacity: 0.6 !important;
 .home-slid4er p a:hover {
     opacity: 0.6 !important;
 }
+
+.home-slider h1 span::after {
+    content: ""; /* Додаємо порожній контент для псевдоелемента */
+    display: block; /* Робимо його блочним елементом */
+    width: 100%; /* Ширина псевдоелемента */
+    height: 100%; /* Висота псевдоелемента */
+    background-image: url('https://i.ibb.co/nk32GpL/b20419812373.png'); /* Встановлюємо фонове зображення */
+    background-size: cover; /* Зображення покриває весь елемент */
+    background-repeat: no-repeat; /* Забороняємо повторення зображення */
+    background-position: center; /* Розміщуємо зображення по центру */
+    position: absolute; /* Абсолютне позиціонування */
+    top: 0; /* Вирівнюємо по верхньому краю батьківського елемента */
+    left: 0; /* Вирівнюємо по лівому краю батьківського елемента */
+    z-index: -1; /* Відправляємо псевдоелемент під контент батьківського елемента */
+}
+
+/* Забезпечуємо, що батьківський елемент має відносне позиціонування */
+.home-slider h1 span {
+    position: relative;
+}
