--- a/fyp_style.css
+++ b/fyp_style.css
@@ -37,4 +37,5 @@ opacity: 0.6 !important;
     background-image: url(https://i.ibb.co/nk32GpL/b20419812373.png);
     position: absolute;
     margin-left: 40px;
+    top: 55%;
 }
