--- a/fyp_style.css
+++ b/fyp_style.css
@@ -47,13 +47,22 @@ opacity: 0.6 !important;
 .box-listing__info{
     margin-left: 30px;
 }
-li.box-listing__item.category_item::before,
-li.box-listing__item.category_item::after {
+li.box-listing__item.category_item::before{
     content: "";
     position: absolute;
     background: white;
     width: 40px;
     height: 2px;
     margin-left: 30px;
+    left: 0;
+}
+
+li.box-listing__item.category_item::after {
+    content: "";
+    position: absolute;
+    background: white;
+    width: 40px;
+    height: 2px;
     margin-right: 30px;
+    right: 0;
 }
